🎨 fix blog header overflow

--- a/_src/assets/css/organisms/_blog-header.pcss
+++ b/_src/assets/css/organisms/_blog-header.pcss
@@ -8,6 +8,7 @@
   margin-inline-end: auto;
   margin-inline-start: auto;
   max-width: var(--content-width-medium);
+  overflow: hidden;
   padding-block-end: calc(2 * var(--padding-base));
   position: relative;
 
@@ -66,6 +67,6 @@
   & img {
     height: 100%;
     mix-blend-mode: multiply;
-    transition: transform 0.2s ease-in;
+    transform: scale(1.05);
   }
 }
